Updates the example server to work with FAS.

--- a/src/openid_example/login.html
+++ b/src/openid_example/login.html
@@ -19,19 +19,8 @@
     <h2>Sign in with:</h2>
     <ul>
       <li>
-        <button onclick="return setId('https://www.google.com/accounts/o8/id')">
-          Google
-        </button>
-      </li>
-      <li>
-        <button onclick="return setId('https://me.yahoo.com')">
-          Yahoo!
-        </button>
-      </li>
-      <li>
-        <input type="text" id="idfield">
-        <button onclick="return setId(document.getElementById('idfield').value);">
-          Go
+        <button onclick="return setId('https://id.fedoraproject.org/')">
+          FAS
         </button>
       </li>
     </ul>
